--- a/src/Anyx/CrosswordBundle/Resources/views/Default/test.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Default/test.html.twig
@@ -23,6 +23,7 @@
 		'@AnyxCrosswordBundle/Resources/public/jasmine/jasmine-html.js'
 		
 		'@AnyxCrosswordBundle/Resources/public/js/models/Crossword.js'
+		'@AnyxCrosswordBundle/Resources/public/js/models/CrosswordModel.js'
 		'@AnyxCrosswordBundle/Resources/public/js/models/Point.js'
 		'@AnyxCrosswordBundle/Resources/public/js/models/Word.js'
 		'@AnyxCrosswordBundle/Resources/public/js/models/WordsCollection.js'
