--- a/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Constructor/index.html.twig
@@ -27,6 +27,8 @@
 		'@AnyxCrosswordBundle/Resources/public/js/views/Word.js'
 		'@AnyxCrosswordBundle/Resources/public/js/views/WordPreview.js'
 		'@AnyxCrosswordBundle/Resources/public/js/views/DirectionChooser.js'
+		'@AnyxCrosswordBundle/Resources/public/js/views/StatusBar.js'
+		
 		'@AnyxCrosswordBundle/Resources/public/js/presenters/WordForm.js'
 		'@AnyxCrosswordBundle/Resources/public/js/presenters/Editor.js'
 	%}
@@ -39,10 +41,14 @@
 				selectors	: {
 					grid				: '.i-grid',
 					form				: '.i-word-form',
-					word				: '.i-word-text',
-					definition			: '.i-word-definition',
-					directionChooser	: '.i-direction-chooser',
-					wordPreview			: '.i-word-preview',
+					saveButton			: '.i-save-button',
+					formSelectors		: {
+						word				: '.i-word-text',
+						definition			: '.i-word-definition',
+						directionChooser	: '.i-direction-chooser',
+						wordPreview			: '.i-word-preview',
+						statusBar			: '.i-status-bar'
+					}
 				},
 				classes		: {
 					wordTable	: 'word-table'
@@ -71,8 +77,10 @@
 		</div>
 	</div>
 	<div class="right-column">
+		
+		<div class="i-status-bar"></div>
+		
 		<form class="i-word-form word-form">
-
 			<dl class="form">
 				<dt>
 					<label>Word</label>
@@ -97,10 +105,17 @@
 			</div>
 			<div class="i-word-preview word-preview">
 			</div>
+		</form>
 
-		</form>		
+		<input type="button" value="save" class="i-save-button" />
 	</div>
 </div>
 
+<script type="text/template" id="t-status-bar">
+	<div class="editor-status <%= status %>">
+		<div class="icon"></div>
+		<div class="status-text i-status-text"><%= text %></div>
+	</div>
+</script>
 
 {% endblock %}
