--- a/src/Anyx/CrosswordBundle/Resources/public/css/editor.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/editor.css
@@ -18,15 +18,16 @@
 }
 
 /* Word */
-TABLE.word-table , .word-table TD {
+TABLE.word-table, .word-table TD {
 	cursor: move;
 	border: 2px solid #000;
 	border-collapse: collapse;
 	padding: 0px;
 	margin: 0px;
-	
 }
-
+TABLE.word-table {
+	position: absolute;
+}
 .word-table TD {
 	width: 19px;
 	min-width: 18px;
@@ -42,10 +43,44 @@ TABLE.word-table , .word-table TD {
 	z-index: 2;
 }
 /* Status Bar */
-.info .status-text {
-	color: #08C;
+.status-text {
+	display: none;
+	padding: 5px;
+	position: absolute;
+	background-color: #fff;
+    right: 20px;
+    top: 20px;	
 }
 
+.info .status-text {
+	color: #08C;
+	border: 1px solid #08C;
+}
 .error .status-text {
 	color: #f00;
+	border: 1px solid #c00;
+}
+.editor-status .icon {
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	right: -35px;
+	bottom:30px;
+	border-radius: 25px;
+	cursor: help;
+}
+.info .icon {
+	background-color: #08C;
+}
+.error .icon {
+	background-color: #c00;
+}
+#status {
+	position: absolute;
+	width: 200px;
+	height: 60px;
+	right: 1px;
+	top: 1px;
+	border-radius: 5px;
+	overflow: hidden;
 }
