--- a/src/Anyx/CrosswordBundle/Resources/public/css/main.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main.css
@@ -10,6 +10,7 @@ BODY {
 	width: 900px;
 	margin: 0px auto;
 	padding: 15px;
+	border-radius: 5px;
 }
 .columns-container {
 	position: relative;
@@ -31,7 +32,8 @@ DL.form DD, DL.form DT {
 	padding: 0px;
 }
 DL.form input[type=text], DL.form TEXTAREA {
-	border: 1px solid #333;
+	border: 1px solid #555;
+	border-radius: 3px;
 	width: 200px;
 	padding: 2px;
 }
