saving words, fixes

--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -33,9 +33,10 @@
 				{% block body %}{% endblock %}
 			</div>
 
+			<a href="{{path('_tests')}}">Tests</a>
 			<div style="clear: both"></div>
 		</div>	
 
-		<div class="footer"><a href="/_tests">sad</a></div>
+		<div class="footer"></div>
     </body>
 </html>
