--- a/src/Anyx/CrosswordBundle/Resources/views/Crossword/edit.html.twig
+++ b/src/Anyx/CrosswordBundle/Resources/views/Crossword/edit.html.twig
@@ -7,6 +7,8 @@
 {% block page_title %}{{title}}{% endblock %}
 
 {% block body %}
-<a href="{{ path('constructor', {'id' : form.vars.value.getId()}) }}">Go to constructor</a>
+<a href="{{ path('constructor', {'id' : form.vars.value.id}) }}">Go to constructor</a>
+
 {% include "AnyxCrosswordBundle:Crossword:form.html.twig" with {'form': form} %}
+
 {% endblock %}
