--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -15,6 +15,12 @@
         {% block javascripts %}{% endblock %}
     </head>
     <body>
+
+		<div class="top-menu">
+			<a href="{{path('fos_user_security_login')}}">login</a>
+		</div>
+
+
 		<div class="header">
 			<div class="logo-container"></div>
 		</div>		
