--- a/src/Anyx/CrosswordBundle/Resources/public/css/main.css
+++ b/src/Anyx/CrosswordBundle/Resources/public/css/main.css
@@ -1,42 +1,23 @@
 BODY {
-	position: relative;
-	margin: 0px;
-	padding: 0px;
-	background-color: #08C;
+	background-color: #24748c;
 }
-.main-container {
-	background-color: #fff;
-	position: relative;
-	width: 900px;
-	margin: 0px auto;
-	padding: 15px;
-	border-radius: 5px;
-}
-.columns-container {
-	position: relative;
-}
-.columns-container .left-column {
-	width: 600px;
-	float: left;
-}
-.columns-container .right-column {
+.row-fluid DIV.login-block {
 	float: right;
-}
-.header {
-	height: 100px;
+	padding: 8px 0px;
+	font-size: 16px;
 }
 
-/* FORMS */
-DL.form DD, DL.form DT {
-	margin: 0px;
-	padding: 0px;
+.login-block A {
+	color: #eee;
 }
-DL.form input[type=text], DL.form TEXTAREA {
-	border: 1px solid #555;
-	border-radius: 3px;
-	width: 200px;
-	padding: 2px;
-}
-DL.form TEXTAREA {
-	height: 100px;
+
+.main-content {
+	padding: 15px 40px;
+	background-color: #fff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
