--- a/src/Anyx/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Anyx/UserBundle/Resources/views/Profile/index.html.twig
@@ -17,6 +17,8 @@
 		'@AnyxUserBundle/Resources/public/js/models/Crossword.js'
 		'@AnyxUserBundle/Resources/public/js/models/CrosswordCollection.js'
 
+		'@AnyxUserBundle/Resources/public/js/models/Solution.js'
+		'@AnyxUserBundle/Resources/public/js/models/SolutionCollection.js'
 
 		'@AnyxUserBundle/Resources/public/js/ProfileWorkspace.js'
 
@@ -30,7 +32,13 @@
 		$(function() {
 			
 			var workspace = new Anyx.Profile.Workspace({
-				document	: window.document
+				document	: window.document,
+				views		: {
+					solved	: new Anyx.View({
+						el			: $('#i-solutions'),
+						template	: 't-solutions'
+					})
+				}
 			});
 
 			var profileView = new Anyx.View.Profile({
@@ -57,7 +65,13 @@
 	<h4>{% trans %}Created crosswords{%endtrans%}</h4>
 	<h4>{% trans %}Solved crosswords{%endtrans%}</h4>
 	
-	<div id="i-profile-menu"></div>
+	<div id="i-profile-menu">
+	</div>
+	
+	<div id="i-profile-page">
+		<div id="i-solutions">
+		</div>
+	</div>
 	
 	<script type="text/template" id="t-profile-menu">
 		<ul>
@@ -66,6 +80,40 @@
 			<% }); %>
 		</ul>	
 	</script>
+
+	<script type="text/template" id="t-solutions">
+		<table>
+		<thead>
+			<th>{%trans%}Crossword{%endtrans%}</th>
+			<th>{%trans%}Solution date{%endtrans%}</th>
+			<th>{%trans%}Correct{%endtrans%}</th>
+		</thead>
+		<tbody>
+		<% if ( !_.isEmpty( solutions ) ) { %>
+			<% _.each(solutions, function( solution ) { %>
+			<tr>
+				<td>
+					<a href="#"><%=solution.get('crossword').title%></a>
+					<p>
+						<%=solution.get('crossword').description%>
+					</p>
+				</td>
+				<td><%=solution.get('updated_at')%></td>
+				<td><%=solution.get('is_correct')%></td>
+			</tr>
+			<% }); %>
+		<% } else { %>
+			<tr>
+				<td colspan="3">
+					{%trans%}Solutions not found{%endtrans%}
+					<a href="#">{%trans%}Want now?{%endtrans%}</a>
+				</td>
+			</tr>
+		<% } %>
+		</tbody>
+		</table>	
+	</script>
+	
 	
 {% endblock body %}
 	
