--- a/app/Resources/views/main.html.twig
+++ b/app/Resources/views/main.html.twig
@@ -7,9 +7,7 @@
 		{% block stylesheets %}
 			{% stylesheets
 				'@AnyxCrosswordBundle/Resources/public/css/bootstrap.min.css'
-				'@AnyxCrosswordBundle/Resources/public/css/bootstrap-responsive.min.css'
 				'@AnyxCrosswordBundle/Resources/public/css/main.css'
-
 			%}
 				<link type="text/css" rel="stylesheet" href="{{ asset_url }}" />
 			{% endstylesheets %}
@@ -51,7 +49,9 @@
 			{% endfor %}				
 			
 			<div class="main-content">
-			<h3 class="page-title">{% block page_title %}{% endblock %}</h3>
+            <div class="page-header">
+			<h1>{% block page_title %}{% endblock %}</h1>
+            </div>    
 			
 			{% block body %}{% endblock %}
 
